--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "educator-js-codespace-template",
+  "name": "codespaces-primer",
   "version": "1.0.0",
   "description": "Educator JS Codespace Template",
   "source": "src/index.html",
-  "homepage": "https://github.com/microsoft/codespaces-teaching-template-js#readme",
+  "homepage": "https://kostaskoukos.github.io/codespaces-primer/",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "build-gh": "parcel build --public-url 'https://{github-username}.github.io/{repo-name}'",
+    "build-gh": "parcel build --public-url 'https://kostaskoukos.github.io/codespaces-primer/'",
     "predeploy": "npm run build-gh",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/microsoft/codespaces-teaching-template-js.git"
+    "url": "git+https://github.com/kostaskoukos/codespaces-primer.git"
   },
-  "author": "Microsoft",
+  "author": "Konstantinos Koukos",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/microsoft/codespaces-teaching-template-js/issues"
+    "url": "https://github.com/kostaskoukos/codespaces-primer/issues"
   },
   "dependencies": {
     "react": "^18.2.0",
